--- a/Droid/BindableRangeSlider.Droid.csproj
+++ b/Droid/BindableRangeSlider.Droid.csproj
@@ -42,6 +42,9 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="Mono.Android" />
+    <Reference Include="MdkStudio.Xamarin.Components.DualHandleSlider">
+      <HintPath>..\MdkStudio.Xamarin.Components.DualHandleSlider\obj\Debug\MdkStudio.Xamarin.Components.DualHandleSlider.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BindableRangeSlider.csproj">
@@ -53,9 +56,6 @@
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="BindableDualHandleSlider.cs" />
-    <Compile Include="DualHandleSlider.cs" />
-    <Compile Include="DualHandleSliderAttributeParser.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
