--- a/MdkStudio.Xamarin.Components.DualHandleSlider/MdkStudio.Xamarin.Components.DualHandleSlider.Droid.csproj
+++ b/MdkStudio.Xamarin.Components.DualHandleSlider/MdkStudio.Xamarin.Components.DualHandleSlider.Droid.csproj
@@ -60,6 +60,7 @@
   <ItemGroup>
     <AndroidResource Include="Resources\layout\Main.axml" />
     <AndroidResource Include="Resources\values\Strings.xml" />
+    <AndroidResource Include="Resources\drawable\handel.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\mipmap-hdpi\" />
